--- a/doc/sections/abstract.tex
+++ b/doc/sections/abstract.tex
@@ -1,4 +1,7 @@
- This research aims to find out how could modern advanced machine learning architecture improve AlexNet model in classification of Poisonous and Edible Mushrooms. The background of this project is a paper titled as "A New Deep Learning Model for the Classification of Poisonous and Edible Mushrooms Based on Improved AlexNet Convolutional Neural Network"[2]. This paper presented a deep learning model for classifying poisonous and edible mushrooms. Thu auther precented an improved version of the AlexNet convolutional neural network architecture. However, despite the limitations of the data set, the author showed the experimental results that show that the proposed model can accurately classify edible and poisonous mushrooms and can shorten training and testing times. In this research, we have explained the reason for improving the AlexNet model to EfficientNetB0 model. We tuned the model parameters to significantly improve performance. We also used techniques such as random search, or default optimization in finding the optimal hyperparameters, and then have evaluated the model performance using cross-validation techniques to ensure the model's generalization ability and reliability. EfficientNet B0 model with 0.0001 learning rate, and with four dense layers and dropout in the test dataset with 90% accuracy.
+\section{Abstract}
+Classifying mushrooms is an important taks with many applications in ecological studies, public health, and the culinary arts. In this work, we provide a novel method for improving the categorization of mushrooms into poisonous or edible. Approach of transfer learning was utlized and EfficientNetB0 architecture was choosen. We acquire datasets, perform thorough preprocessing, construct models, and optimize hyperparameters as part of our technique. By using transfer learning, we improved the pre-trained EfficientNetB0 model's classification accuracy by methodically fine tuning the hyper-parameter for optimum result.
+We found an ideal model configuration through repeated trying and testing, which greatly enhanced classification performance, especially in properly recognizing dangerous mushrooms.
+
 \hfill \break
 
 \textbf{Keywords:} 
