--- a/doc/sections/conclusion.tex
+++ b/doc/sections/conclusion.tex
@@ -1,2 +1,8 @@
-Our experiment shows that the EfficientNet  model  was trained on Kegal dataset with 100 southand images, devied into tow classess. Replacing the Convolutional Layers with more efficient building blocks such as depthwise separable convolutions, help the model to work with a better performance. 
+\section{Conclusion}
+In conclusion, our study demonstrates the efficacy of transfer learning with the EfficientNetB0 architecture in optimizing mushroom classification. By fine-tuning the pre-trained model on a diverse dataset of mushroom images, we achieved superior classification accuracy and recall, accurately distinguishing between edible and poisonous mushrooms. Additionally, our model's performance on an independent dataset highlights its robustness and generalization capabilities, outperforming previous studies and mitigating the risk of misclassification. These findings underscore the importance of leveraging advanced architectures and fine-tuning techniques in machine learning model development, paving the way for enhanced applications in food safety, environmental conservation, and public health initiatives. Overall, our research contributes to advancing machine learning methodologies in mycology and underscores the potential of automated classification systems in addressing real-world challenges.
+
+
+
+
+
 
