--- a/doc/sections/future-works.tex
+++ b/doc/sections/future-works.tex
@@ -1,7 +1,12 @@
-For future work on this project, we encourage someone to replac more convolutional Layers with more efficient building blocks such as depthwise separable convolutions in order to improve the the performance. use a differente hyperparameters to adjust the depthwise layer, and using a smaller number of  weights to increasse the accurancey.
+\section{Future-Works}
+While our current study has made significant strides in optimizing mushroom classification through transfer learning and the EfficientNetB0 architecture, there remain several avenues for future research and improvement. The following are some key areas that warrant further exploration and development:
 
-However, using generative adversarial networks to generate more fungal image datasets will overcome the data limitations of this research and will contribute to improving the quality and diversity of the training data, ultimately enhancing performance.
+Expansion of Dataset Size and Class Balance: Increasing the number of images in each species class can significantly enhance the robustness of the classification model. It's essential to ensure not only a balanced number of images between the two main classes (edible and poisonous) but also within each species class. Addressing the imbalance in the number of images per species can help mitigate the potential bias towards more frequently represented species and improve the model's ability to classify less represented species accurately.
 
+Integration of Generative Adversarial Networks (GANs): Implementing GANs to generate synthetic mushroom images presents a promising approach to augmenting the original dataset. By synthesizing additional images for underrepresented species, researchers can alleviate the imbalance in the dataset and provide the model with more examples to learn from, thus improving its classification performance.
 
+Combination of Original and GAN-Generated Datasets: Combining datasets generated from GANs with the original dataset offers an opportunity to enhance model performance and generalization. By leveraging the diverse characteristics captured in both datasets, future studies can train more robust classification models capable of accurately distinguishing between different mushroom species. While this overlaps with the integration of GANs, it emphasizes the importance of incorporating diverse data sources to address dataset imbalances.
 
+Utilization of Higher Resolution Images: Incorporating higher resolution images into the dataset can potentially enhance the classification results by providing more detailed information for the model to learn from. Future research efforts could focus on acquiring and preprocessing higher resolution mushroom images to improve the model's ability to discern subtle features and textures.
 
+By addressing these areas for future work, researchers can further advance the field of mushroom classification and contribute to the development of more accurate, robust, and generalized classification models with broader applications in food safety, environmental conservation, and public health initiatives.
