--- a/doc/sections/introduction.tex
+++ b/doc/sections/introduction.tex
@@ -1,12 +1,11 @@
-The classification of mushrooms, a fundamental task spanning culinary arts, ecological studies, and public health initiatives, is pivotal for distinguishing between species that are either edible or poisonous [1]. Ensuring the accuracy of such classification is paramount for safeguarding food safety and preserving biodiversity [2]. Traditionally, this task has relied on manual inspection, a labor-intensive process prone to errors and requiring specialized expertise in mycology [3].
+\section{Introduction}
 
-However, recent advancements in machine learning, particularly in the realm of computer vision, have transformed the landscape of mushroom classification. Deep learning techniques, notably convolutional neural networks (CNNs), have emerged as powerful tools for image classification tasks [4]. CNNs excel in learning hierarchical representations of image data, enabling them to capture intricate patterns and features crucial for discriminating between different mushroom species [5].
+The categorization of mushrooms, specifically the differentiation between toxic and non-toxic types, is an essential undertaking in multiple fields such as mycology, food safety, and medical science. Mushroom classification is particularly challenging as there are millions of different types of mushroom \cite{wibowo2018classification}. Toxic species should only be identified accurately to avoid potential harm from ingestion. Recent developments in machine learning methods have opened up exciting new possibilities for this classification process' automation.
 
-Moreover, the concept of transfer learning has revolutionized the development of classification systems by leveraging pre-trained models to expedite the training process and enhance classification accuracy [6]. By fine-tuning pre-trained models on specific tasks, transfer learning enables the transfer of knowledge from large-scale datasets to domain-specific applications, thereby mitigating the need for extensive labeled data [7].
+Several studies have delved into the application of machine learning algorithms and deep learning architectures for mushroom classification. (Tarawneh et al., 2022) explored the efficacy of Decision Trees, Random Forests, and Support Vector Machines in categorizing mushrooms based on their features\cite{inproceedings}. (Zhang et al., 2022) applied the CNN architecture to extract features from images and classify them into poisonous or edible. The paper uses only few species which are divided into poisonous and edible mushroom.  
 
-Within the realm of CNN architectures, EfficientNet has garnered significant attention for its remarkable performance and computational efficiency [8]. EfficientNetB0, the smallest variant in the EfficientNet family, strikes an optimal balance between model size and performance, making it an ideal candidate for mushroom classification tasks [9]. By leveraging transfer learning with EfficientNetB0 as the backbone, we aim to harness the power of pre-trained models to develop a highly accurate and efficient mushroom classification system.
+Moreover, significant advancements have been made in image classification, with the emergence of robust models trained on extensive datasets capable of recognizing diverse patterns within images. Leveraging these pre-trained models on new datasets is facilitated by their comprehensive understanding of various patterns. This simplifies the process of training on novel images, as the pre-trained networks already possess rich information about different patterns. Through transfer learning, wherein pre-trained models are fine-tuned for new tasks, notable progress has been demonstrated in augmenting the diagnostic capabilities of these models. Tan and Le (2020) presented a ground-breaking study that introduced the EfficientNet design, which uses compound scaling to transform the field\cite{tan2020efficientnet}. This novel methodology outperformed conventional scaling techniques, producing previously unheard-of efficiency-accuracy trade-offs. Among these, the EfficientNetB0 architecture is particularly noteworthy for being the best option for transfer learning because of its well-thought-out architecture and outstanding results in a variety of image classification tasks.
 
-In this study, we embark on a comprehensive exploration of transfer learning and the EfficientNetB0 architecture for mushroom classification. Through meticulous experimentation and analysis, we seek to elucidate the intricate dynamics of transfer learning and the unique characteristics of the EfficientNetB0 architecture in the context of mushroom classification. By shedding light on the efficacy and potential limitations of these techniques, we endeavor to contribute to the advancement of machine learning methodologies in mycology and beyond.
+(Ketwongsa et al., 2022) investigated the potential of Convolutional Neural Networks (CNNs) for mushroom classification, leveraging image processing techniques to extract discriminative features from mushroom images. The paper also use the concept of transfer learning. It uses alex net as a base model and try to fine tune it for the mushroom classification task\cite{ketwongsa2022new}. The paper use five species of mushroom found in Thailand classify it into poisonous and non poisonous and make machine learning model using transfer learning approach. 
 
-Our research not only addresses the pressing need for automated mushroom classification systems but also lays the groundwork for future applications in food safety, environmental conservation, and public health initiatives.
-
+This essay aims to explore the optimization of mushroom classification through the integration of transfer learning with the EfficientNetB0 architecture. EfficientNetB0 being choosen, as it has the state of the art result, it excels at image recognition at the same time being efficient. By leveraging the pre-trained weights of EfficientNetB0 on large-scale image datasets, we seek to enhance the accuracy and efficiency of mushroom classification models. Drawing insights from the aforementioned studies, we aim to demonstrate the effectiveness of this approach in distinguishing between poisonous and non-poisonous mushrooms, thereby contributing to advancements in food safety and mycology.
