--- a/doc/main.tex
+++ b/doc/main.tex
@@ -75,7 +75,6 @@ bookmarks=true,bookmarksopenlevel=2]{hyperref}
 \usepackage{multirow}
 
 
-
 \usepackage[left=2.5cm, right=2.5cm, top=2.5cm,includefoot, bottom=2.5cm,showframe]{geometry}
 \renewcommand{\headrulewidth}{1pt}
 \fancyhead[L,RO]{\textbf{\thepage}}
@@ -102,9 +101,14 @@ bookmarks=true,bookmarksopenlevel=2]{hyperref}
 \end{comment}
 
 \usepackage{multicol}
-%\usepackage{hyperref}
+\usepackage{hyperref}
 \hypersetup{colorlinks,linkcolor={blue},citecolor={red},urlcolor={cyan}}
 \usepackage[backend=biber,style=numeric,citestyle=nature]
+
+
+
+
+
 \lstset{language=Python}
 
 %New colors defined below
